--- a/practice_workbench/styles/Day_04_Flexbox.css
+++ b/practice_workbench/styles/Day_04_Flexbox.css
@@ -12,12 +12,28 @@
     text-align: center;
     height: 60px;
     width : 100px;
-    border: 1px solid white;
+    border: 2px solid greenyellow;
+}
+
+.icon{
+    max-width: 100px;
+    max-height: 60px;
+}
+
+.icon img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display:block;
 }
 
 @media(max-width: 600px){
     .NavBar{
         flex-direction: column;
+    }
+
+    .icon{
+        order : 99;
     }
 
 }
